syntax = "proto3";

package appointment;

import "google/protobuf/timestamp.proto";

message BusinessNodeHour {
  string id = 1; 
  string BusinessNodeId = 2;
  string Type = 3;
  int32 Day = 4;
  string Date = 5;
  bool IsOpen = 6;
  bool IsActive = 7;
  string Message = 8;
  string StartTime = 9;
  string EndTime = 10;
  }

message BusinessNodeHourCreateModel {
    string BusinessNodeId = 1;
    string Type = 2;
    int32 Day = 3;
    string Date = 4;
    bool IsOpen = 5;
    bool IsActive = 6;
    string Message = 7;
    string StartTime = 8;
    string EndTime = 9;
}

message DayWiseWorkingHour {
    int32 Day = 1;
    string StartTime = 2;
    string EndTime = 3;
}

message BusinessNodeHourCreateMultipleModel {
    string BusinessNodeId = 1;
    repeated DayWiseWorkingHour DayWiseWorkingHours = 2;
}

message BusinessNodeHourCreateMultipleResponse {
    repeated BusinessNodeHourCreateMultipleResponseItem data = 1;
}
message BusinessNodeHourCreateMultipleResponseItem {
    int32 Day = 1;
    string Type = 2;
    string Date = 3;
    bool IsOpen = 4;
    bool IsActive = 5;
    string Message = 6;
    string StartTime = 7;
    string EndTime = 8;
    string BusinessNodeId = 9;
    string id = 10;
    google.protobuf.Timestamp CreatedAt = 11;
    google.protobuf.Timestamp UpdatedAt = 12;
    google.protobuf.Timestamp DeletedAt = 13;
    bool IsDeleted = 14;
}
message BusinessNodeHourGetByIdModel {
    string id = 1; 
}

message BusinessNodeHourGetByIdResponse {
    string id = 1; 
    string BusinessNodeId = 2;
    string Type = 3;
    int32 Day = 4;
    string Date = 5;
    bool IsOpen = 6;
    bool IsActive = 7;
    string Message = 8;
    string StartTime = 9;
    string EndTime = 10;
}

message BusinessNodeHourCreateResponse {
    string id = 1; 
    string BusinessNodeId = 2;
    string Type = 3;
    int32 Day = 4;
    string Date = 5;
    bool IsOpen = 6;
    bool IsActive = 7;
    string Message = 8;
    string StartTime = 9;
    string EndTime = 10;
}

message BusinessNodeHourUpdateModel {
    string id = 1; 
    string BusinessNodeId = 2;
    string Type = 3;
    int32 Day = 4;
    string Date = 5;
    bool IsOpen = 6;
    bool IsActive = 7;
    string Message = 8;
    string StartTime = 9;
    string EndTime = 10;
  }

message BusinessNodeHourUpdateResponse {
    string id = 1; 
    string BusinessNodeId = 2;
    string Type = 3;
    int32 Day = 4;
    string Date = 5;
    bool IsOpen = 6;
    bool IsActive = 7;
    string Message = 8;
    string StartTime = 9;
    string EndTime = 10;
  }

message BusinessNodeHourSearchModel {
    string businessNodeId = 1;
    bool isActive = 2;
}

message BusinessNodeHourSearchResponse {
    int32 TotalCount = 1;
    int32 RetrievedCount = 2;
    int32 PageIndex = 3;
    int32 ItemsPerPage = 4;
    string Order = 5;
    repeated BusinessNodeHourSearchResponseItem Items = 6;
}

message BusinessNodeHourSearchResponseItem {
    string id = 1; 
    string BusinessNodeId = 2;
    string Type = 3;
    int32 Day = 4;
    string Date = 5;
    bool IsOpen = 6;
    bool IsActive = 7;
    string Message = 8;
    string StartTime = 9;
    string EndTime = 10;
    google.protobuf.Timestamp CreatedAt = 11;
    google.protobuf.Timestamp UpdatedAt = 12;
    google.protobuf.Timestamp DeletedAt = 13;
    bool IsDeleted = 14;
}

message BusinessNodeHourDeleteModel {
    string id = 1;
}

  message BusinessNodeHourDeleteResponse {
    int32 count = 1;
}

service BusinessNodeHours {
    rpc Create(BusinessNodeHourCreateModel) returns (BusinessNodeHourCreateResponse);
    rpc CreateMultiple(BusinessNodeHourCreateMultipleModel) returns (BusinessNodeHourCreateMultipleResponse) {};
    rpc GetById(BusinessNodeHourGetByIdModel) returns (BusinessNodeHourGetByIdResponse) {};
    rpc Search(BusinessNodeHourSearchModel) returns (BusinessNodeHourSearchResponse) {};
    rpc Update(BusinessNodeHourUpdateModel) returns (BusinessNodeHourUpdateResponse) {};
    rpc Delete(BusinessNodeHourDeleteModel) returns (BusinessNodeHourDeleteResponse) {};

}